force-app/main/default/objects/Order/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Denormalized Brand value derived from the selected Store’s Brand. Used for consistent reporting, filtering, and display without manual entry.</description>
    <formula>IF(
  ISBLANK(Store__c),
  &quot;&quot;,
  Store__r.O2P_Business_Brand__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated from the Store. To change the Brand, update the Store selection (or the Store’s Brand). This field can’t be edited manually.</inlineHelpText>
    <label>Brand</label>
    <type>Text</type>
</CustomField>