force-app/main/default/objects/Order/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Customer email address used for order confirmations, pickup notifications, and communication related to this order. For guest checkout, this is the email entered at checkout.</description>
    <inlineHelpText>Enter the customer’s email for confirmation and pickup updates. This field is used to send order-related notifications.</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>