force-app/main/default/objects/Order/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer’s display name for this order (used for pickup identification and order communications). May differ from the Contact name if the order was placed as a guest.</description>
    <inlineHelpText>Enter the name the customer wants associated with this order for pickup. For guest checkout, enter the name provided during checkout.</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>