force-app/main/default/objects/Order/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>Customer phone number used for pickup coordination and order-related communication. For guest checkout, this is the phone provided at checkout.</description>
    <inlineHelpText>Enter the best phone number to reach the customer about this order (pickup questions, delays, or changes).</inlineHelpText>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>