force-app/main/default/objects/Order/fields/In_Progress_At__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_At__c</fullName>
    <description>Date/time when the order began preparation (moved to In Progress). Used to measure queue time and fulfillment cycle time.</description>
    <inlineHelpText>Automatically set when the order status changes to In Progress. Used for operational timing and reporting.</inlineHelpText>
    <label>In Progress At</label>
    <type>DateTime</type>
</CustomField>