force-app/main/default/objects/Order/fields/Payment_Intent_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Intent_ID__c</fullName>
    <description>Stores the payment provider’s transaction reference (e.g., Stripe PaymentIntent Id) associated with this Order. Used for reconciliation, refunds, disputes, and support.</description>
    <externalId>true</externalId>
    <inlineHelpText>Populated by the payment integration after a payment session is created or confirmed. Used to locate the payment in the provider’s dashboard and to match webhook events back to this Order.</inlineHelpText>
    <label>Payment Intent ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>