force-app/main/default/objects/Order/fields/Payment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payment_Provider__c</fullName>
    <description>Payment gateway/provider used to process payment for this order. Used for reconciliation, reporting, and support troubleshooting.</description>
    <inlineHelpText>Select the provider that processed the customer’s payment (e.g., Stripe, Square). Leave blank for unpaid/draft orders; the field can be required at “Paid” status via validation.</inlineHelpText>
    <label>Payment Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Authorize.Net</fullName>
            </value>
            <value>
                <fullName>Braintree</fullName>
            </value>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Shopify Payments</fullName>
            </value>
            <value>
                <fullName>Manual / Cash</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>