force-app/main/default/objects/Order/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Indicates the current payment state for the order (e.g., unpaid, pending, authorized, paid, refunded). Updated by the checkout/payment process and used to control fulfillment eligibility and reporting.</description>
    <inlineHelpText>System-managed payment status for this order. Do not change manually unless correcting a payment issue (refund/chargeback). Fulfillment should only proceed when status is Paid (or Authorized if using delayed capture).</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially Refunded</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>