force-app/main/default/objects/Order/fields/Picked_Up_At__c.field-meta.xml
<CustomField>
    <fullName>Picked_Up_At__c</fullName>
    <description>Date/time when the order was picked up by the customer (status moved to Picked Up/Completed). Used for audit history, operational reporting, and wait-time metrics.</description>
    <inlineHelpText>Automatically set when the order status changes to Picked Up/Completed. Used for reporting and timing.</inlineHelpText>
    <label>Picked Up At</label>
    <type>DateTime</type>
</CustomField>