force-app/main/default/objects/Order/fields/Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date_Time__c</fullName>
    <description>Scheduled date and time when the customer will pick up the order from the selected Store. Used for fulfillment planning, notifications, and operational reporting.</description>
    <inlineHelpText>Select the date and time the customer will pick up this order. Use the Store’s local time. If rescheduled, update this field.</inlineHelpText>
    <label>Pickup Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>