force-app/main/default/objects/Order/fields/Placed_At__c.field-meta.xml
<CustomField>
    <fullName>Placed_At__c</fullName>
    <description>Date/time when the order was placed (submitted by the customer). Used for operational metrics, reporting, and fulfillment timing.</description>
    <inlineHelpText>Automatically set when the order is submitted/confirmed. Used for reporting and timing. Not intended for manual edits.</inlineHelpText>
    <label>Placed At</label>
    <type>DateTime</type>
</CustomField>