force-app/main/default/objects/Order/fields/Ready_At__c.field-meta.xml
<CustomField>
    <fullName>Ready_At__c</fullName>
    <description>Date/time when the order was marked Ready for pickup (status moved to Ready). Used for customer notifications, SLA tracking, and prep-time reporting.</description>
    <inlineHelpText>Automatically set when the order status changes to Ready. Used for timing and reporting.</inlineHelpText>
    <label>Ready At</label>
    <type>DateTime</type>
</CustomField>