force-app/main/default/objects/Order/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <description>Free-form notes provided by the customer or staff for this order (e.g., allergy notes, substitutions, pickup preferences). For operational use only.</description>
    <inlineHelpText>Enter any special instructions for preparing or handing off this order (e.g., allergies, no nuts, writing on box). Do not include sensitive personal information.</inlineHelpText>
    <label>Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>