force-app/main/default/objects/Order/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Primary store location responsible for preparing and fulfilling this order. Used for routing, reporting, and brand derivation.</description>
    <inlineHelpText>Select the store that will fulfill this order. Brand and store-level reporting are driven from this selection.</inlineHelpText>
    <label>Store</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>