force-app/main/default/objects/Order/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Final payment transaction/charge identifier returned by the payment provider after successful payment capture. Used for reconciliation, refunds, and support lookups.</description>
    <externalId>true</externalId>
    <inlineHelpText>Populated by the payment integration when payment succeeds. This is the provider’s final transaction/charge ID (not the Payment Intent). Use it to locate the charge/refund in the provider dashboard.</inlineHelpText>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>